# mocap-converter

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  publish.yml
src/bvh_converter/: __about__.py  __init__.py  kinematic_tree.py  motion_data.py  node.py  pos2rot.py  rot2pos.py
src/bvh_converter/io/bvh/: channel_layout.py  loader.py  node_channel.py  saver.py  types.py
src/mocap_converter/: __init__.py  adjust_kinematic_tree.py  kinematic_tree.py  motion_data.py  node.py  pos2rot.py  rot2pos.py
src/mocap_converter/adapter/: __init__.py  azure_kinect.py
src/mocap_converter/io/bvh/: channel_layout.py  loader.py  saver.py  types.py
tests/: test_conversion_accuracy.py  test_kinematic_tree.py  test_node.py  test_public_api.py
tests/fixtures/: calibration1.bvh
tests/io/bvh/: test_loader.py  test_saver.py
